<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Simple Time-Syncer over HTTP</string>
    <string name="app_name">HTTPSync</string>
<string name="button_text">Start Syncing</string>
<string name="local_service_started">Ye be started, mr. Local</string>
<string name="show_sql">Count Rows</string>
<string name="empty">i am empty</string>
<string name="dump_sql">Dump</string>
<string name="delete_sql">Clear</string>
</resources>
