<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/hello"
	    />
	    

	    <LinearLayout 
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
	    
		    <Button
		    	android:id="@+id/push_button"
		    	android:text="@string/button_text"
			    android:layout_width="wrap_content" 
			    android:layout_height="fill_parent" 
		    />
		    
		    <Button
		    	android:id="@+id/sql_button"
		    	android:text="@string/show_sql"
			    android:layout_width="wrap_content" 
			    android:layout_height="fill_parent" 
		    />
		    <Button
		    	android:id="@+id/dump_button"
		    	android:text="@string/dump_sql"
			    android:layout_width="wrap_content" 
			    android:layout_height="fill_parent" 
		    />
		    <Button
		    	android:id="@+id/truncate_button"
		    	android:text="@string/delete_sql"
			    android:layout_width="wrap_content" 
			    android:layout_height="fill_parent" 
		    />
	    </LinearLayout>
	    <!-- ListView
	    	android:id="@+id/data_list"
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    /-->
		<TextView  
			android:id="@+id/text_to_fill"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/empty"
	    />
   	</LinearLayout>
</LinearLayout>
